--- a/Firstproject/src/main/webapp/WEB-INF/web.xml
+++ b/Firstproject/src/main/webapp/WEB-INF/web.xml
@@ -3,10 +3,13 @@
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
  xmlns="https://jakarta.ee/xml/ns/jakartaee" 
  xmlns:web="http://xmlns.jcp.org/xml/ns/javaee" 
- xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_5_0.xsd http://xmlns.jcp.org/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="5.0">
+ xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee 
+ https://jakarta.ee/xml/ns/jakartaee/web-app_5_0.xsd 
+ http://xmlns.jcp.org/xml/ns/javaee 
+ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="5.0">
   <servlet>
     <servlet-name>Controller</servlet-name>
-    <servlet-class>com.siarhei.controller.Controller</servlet-class>
+    <servlet-class>com.siarhei.controller.FrontController</servlet-class>
   </servlet>
   <servlet-mapping>
     <servlet-name>Controller</servlet-name>
